Revert "Fixes link jump on hover by adding a white underline, which sets aside space in the paragraph for hover"
This reverts commit 87ca4bfcaf28383acfa80bcf71e3ec69eebe9bb0.

--- a/assets/sass/isc-styles.scss
+++ b/assets/sass/isc-styles.scss
@@ -26,7 +26,7 @@ $desktop-width: 992px;
     }
 }
 
-a { color: #0B6EAD; border-bottom: 1px solid #ffffff }
+a { color: #0B6EAD; }
 h1 { font-size: 28px; }
 h2 { font-size: 23px; }
 
